# docbert

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  flake.nix
crates/docbert/: Cargo.toml  build.rs  default.nix
crates/docbert-core/: Cargo.toml
crates/docbert-core/.hegel/constants/: 0469f5ec984659a9  092832aba4e6106e  0c02d7fe10bd7c75  0f1a775618388a07  1158e4ca694b55e3  15eb71614d03ef6a  17de449d715667f5  19f2f05be6662b4b  2028f7fa7799a5ac  228596311b0eb513  25b51d8497d05f30  26121fa91dca3e00  289132263d704103  2a35a5a027f984b0  2a40179c0e556b98  2a86b17dfcaec911  2bede5c723cdac02  2d00ee2df0442a94  2f9380d60eb9b016  368ae216030c4e8c  3705dca92bbb68a6  3d3c053d964d4e5c  40c9693d07d3d074  42c815baa4c050b0  43faa1fb8c45a7f3  4ad796ef10cc2de7  4d25b2feea5c5b8b  4e07a9ef47d40ddd  55710074b9a823f2  5706a824d57d684b  57c2fdd3a62ba69a  5aaf1b745739411c  5e3b79f2908de224  622b6f2021a542d7  62444c091e0040f2  63de5a17d145e0d0  652a08bc2eca6bea  695704c6386c2604  69a296f3ac4be55b  69d5ecd15436ac8a  (+53 more)
crates/docbert-core/benches/: embedding_compression.rs  embedding_trim.rs  token_pool.rs
crates/docbert-core/proptest-regressions/: redb_migration.txt
crates/docbert-core/src/: chunking.rs  config_db.rs  conversation.rs  data_dir.rs  doc_id.rs  document_preparation.rs  embedding.rs  embedding_db.rs  error.rs  incremental.rs  ingestion.rs  lib.rs  merkle.rs  model_manager.rs  path_safety.rs  plaid.rs  preparation.rs  redb_migration.rs  reranker.rs  results.rs  search.rs  search_results.rs  storage_codec.rs  stored_json.rs  tantivy_index.rs  test_util.rs  text.rs  text_util.rs  token_pool.rs  walker.rs
crates/docbert-plaid/: Cargo.toml
crates/docbert-plaid/benches/: build_index.rs  codec.rs  kmeans.rs  search.rs  shared.rs
crates/docbert-plaid/src/: codec.rs  device.rs  distance.rs  error.rs  index.rs  kmeans.rs  lib.rs  persistence.rs  search.rs  update.rs
crates/docbert-plaid/tests/: hegel_properties.rs  properties.rs  recall.rs
crates/docbert-pylate/: Cargo.toml  README.md
crates/docbert-pylate/benches/: encode_batch_size.rs
crates/docbert-pylate/benchmark/: main.rs
crates/docbert-pylate/src/: builder.rs  error.rs  lib.rs  model.rs  modernbert.rs  pooling.rs  utils.rs
crates/docbert-pylate/tests/: properties.rs  tests.rs
crates/docbert/.hegel/constants/: 06d6ccb4e735e03d  087a311c18c63c99  0e01cae08e46abaa  109c19029dcae22f  15392eb50cbc2070  18af6f4efe6a3eaf  1a8ab695cc82639c  232543654f10c898  29395836a5a73b14  2bab31f5e888773e  3336d3ed8939ba31  39a4d168da47fca5  3bf6f55662e20e54  3c916cdd652162c9  3cae80905ccc11db  3db0b798a7b2dc39  40b1034a8bbb3f59  46d30eebe4113578  4abfe78b8bd9679e  4c2fafbc69267cae  4c6b889801aff5e7  4e34b7c6e4a796da  4f19c5a4e6706086  54a5bd2e80c5acb6  56f86ef47fa26d81  57ade5a561fba49e  59e23290e5e962ec  5b055b0ce466d596  65f685d945af5d3a  662ce1cfbed70350  6da3655aa39b8bee  71967bebcb1d49af  7306da3a30efc3fb  7819cd6f3f71da9c  785e18c53e130f0b  7c0b09adfccb2ece  7d28776180cc88ea  80baeba5fa4fe0e3  869dc8c02c1f863a  8872fd7f753ffa40  (+53 more)
crates/docbert/src/: cli.rs  collection_snapshots.rs  command_handlers.rs  indexing.rs  indexing_workflow.rs  main.rs  mcp.rs  runtime.rs  runtime_resources.rs  snapshots.rs
crates/docbert/src/command_handlers/: collections.rs  indexing.rs  json_output.rs  mod.rs  model.rs  search.rs
crates/docbert/src/commands/: collections.rs  contexts.rs  indexing.rs  mod.rs  model.rs  search.rs  style.rs
crates/docbert/src/web/: ingest.rs  mod.rs  paths.rs  server.rs  state.rs  ui.rs
crates/docbert/src/web/routes/: collections.rs  conversations.rs  documents.rs  mod.rs  search.rs  settings.rs
crates/docbert/ui/: README.md  bun.nix  default.nix  eslint.config.js  index.html  package.json  vite.config.ts
crates/docbert/ui/src/: App.css  App.tsx  index.css  lazy-pages.tsx  main.tsx
crates/docbert/ui/src/components/: MarkdownCodeBlock.test.tsx  MarkdownCodeBlock.tsx  MermaidDiagram.css  MermaidDiagram.tsx  SearchResults.css  SearchResults.test.tsx  SearchResults.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx
crates/docbert/ui/src/lib/: api.test.ts  api.ts  document-preview-targets.test.ts  document-preview-targets.ts  obsidian-links.test.ts  obsidian-links.ts  prism-theme.ts  use-prefers-dark.ts
crates/docbert/ui/src/pages/: Chat.css  Chat.test.tsx  Chat.tsx  ChatTranscript.test.tsx  ChatTranscript.tsx  Documents.css  Documents.test.tsx  Documents.tsx  Search.css  Search.test.tsx  Search.tsx  Settings.css  Settings.test.tsx  Settings.tsx  chat-agent-runtime-round.test.ts  chat-agent-runtime.test.ts  chat-agent-runtime.ts  chat-context.ts  chat-message-codec.test.ts  chat-message-codec.ts  chat-message-groups.test.ts  chat-session.ts  chat-stream.test.ts  chat-stream.ts  chat-subagents.test.ts  chat-tools.test.ts  chat-tools.ts  chat-transcript-model.ts  document-preview.test.tsx  document-preview.tsx  document-tree.ts  documents-page-state.test.ts  documents-page-state.ts  documents-tree.tsx  search-session.tsx
crates/docbert/ui/src/test/: setup.ts
crates/docserver/: Cargo.toml
crates/docserver/src/: content.rs  document_ingest.rs  error.rs  main.rs  state.rs  ui.rs
crates/docserver/src/routes/: collections.rs  conversations.rs  documents.rs  mod.rs  search.rs  settings.rs
crates/docserver/ui/: index.html  package.json
crates/docserver/ui/src/: App.css  App.tsx  index.css  main.tsx
crates/docserver/ui/src/components/: Sidebar.css  Sidebar.tsx
crates/docserver/ui/src/lib/: api.ts
crates/docserver/ui/src/pages/: Chat.css  Chat.test.tsx  Chat.tsx  ChatTranscript.tsx  (+26 more)
crates/rustbert/: Cargo.toml  README.md  default.nix
crates/rustbert/src/: cache.rs  collection.rs  crate_ref.rs  crate_walker.rs  crates_io.rs  data_dir.rs  docs_rs.rs  download.rs  error.rs  extract.rs  fetcher.rs  host_project.rs  implementor_registry.rs  indexer.rs  ingestion.rs  item.rs  lib.rs  lockfile.rs  lookup.rs  lowering.rs  main.rs  mcp.rs  module_discovery.rs  parse.rs  reqwest_fetcher.rs  resolver.rs  rustdoc_merge.rs  search.rs  sync.rs
crates/rustbert/tests/: end_to_end.rs
(+46 files in other folders)
