[package]
name = "docbert"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A powerful semantic search CLI for your documents"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
candle-core = "0.9.1"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5"
globset = "0.4"
kdam = { version = "0.6.4", features = ["spinner", "template"] }
percent-encoding = "2"
pylate-rs = "1.0"
rayon = "1.11.0"
redb = "3.1.0"
rmcp = { version = "0.14.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "3.0.0"

[features]
default = []
mkl = ["pylate-rs/mkl"]
accelerate = ["pylate-rs/accelerate"]
metal = ["pylate-rs/metal"]
cuda = ["pylate-rs/cuda"]

[dev-dependencies]
tempfile = "3"
