[package]
name = "docbert-core"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for docbert semantic document search"

[dependencies]
blake3 = "1.8.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
candle-core = "0.10.2"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
ignore = "0.4"
pylate-rs = { version = "1.0.4", git = "https://github.com/cfcosta/pylate-rs" }
rayon = "1.11.0"
redb = "4.0.0"
rkyv = "0.8.15"
pdf_oxide = "0.3.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.0"
thiserror = "2"

[features]
default = []
mkl = ["pylate-rs/mkl"]
accelerate = ["pylate-rs/accelerate"]
metal = ["pylate-rs/metal"]
cuda = ["pylate-rs/cuda"]

[dev-dependencies]
tempfile = "3"
