[package]
name = "docbert-core"
version = "0.6.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for docbert semantic document search"

[dependencies]
blake3 = "1.8.4"
bytemuck = { version = "1.25.0", features = ["derive"] }
candle-core = "0.10.2"
docbert-plaid = { path = "../docbert-plaid" }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
ignore = "0.4"
docbert-pylate = { path = "../docbert-pylate" }
rayon = "1.12.0"
redb = "4.1.0"
rkyv = "0.8.15"
pdf_oxide = "0.3.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26.0"
thiserror = "2"

[features]
default = []
mkl = ["docbert-pylate/mkl"]
accelerate = ["docbert-pylate/accelerate"]
metal = ["docbert-pylate/metal"]
# `cuda` propagates to both docbert-pylate (model inference on GPU) and
# docbert-plaid (k-means + MaxSim matmul on GPU).
cuda = ["docbert-pylate/cuda", "docbert-plaid/cuda"]

[dev-dependencies]
hegeltest = "0.5"
tempfile = "3"
