[package]
name = "docbert-plaid"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "PLAID-style multi-vector index for docbert (ColBERT late-interaction)"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9"
tempfile = "3"

[[bench]]
name = "kmeans"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "build_index"
harness = false
