[package]
name = "docbert-plaid"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "PLAID-style multi-vector index for docbert (ColBERT late-interaction)"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
candle-core = "0.10.2"
thiserror = "2"

[features]
default = []
# Build candle with CUDA support so heavy tensor ops (k-means assign,
# MaxSim batch matmul) run on the GPU. Requires a working CUDA toolkit
# at link time.
cuda = ["candle-core/cuda"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
hegeltest = "0.5"
rand = "0.9"
tempfile = "3"

[[bench]]
name = "kmeans"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "build_index"
harness = false
