[package]
name = "docbert-pylate"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Rust library for late interaction (ColBERT) models, vendored into the docbert workspace."

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
candle-flash-attn = { version = "0.10.2", optional = true }
tokenizers = { version = "0.22.2", default-features = false, features = [
  "onig",
] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
safetensors = "0.7.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
hf-hub = { version = "0.5.0", default-features = false, features = [
  "ureq",
  "rustls-tls",
] }
kodama = "0.3.0"
rayon = "1.12.0"

[features]
default = []

metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:candle-flash-attn",
]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = [
  "candle-core/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]

[dev-dependencies]
hegeltest = "0.6"
