[package]
name = "docbert"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A powerful semantic search CLI for your documents"

[dependencies]
docbert-core = { path = "../docbert-core" }
axum = "0.8"
clap = { version = "4.5.57", features = ["derive"] }
include_dir = "0.7"
clap_complete = "4.5"
globset = "0.4"
kdam = { version = "0.6.4", features = ["spinner", "template"] }
percent-encoding = "2"
rmcp = { version = "1.2.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
tokio = { version = "1", features = [
  "io-std",
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "3.0.0"

[features]
default = []
mkl = ["docbert-core/mkl"]
accelerate = ["docbert-core/accelerate"]
metal = ["docbert-core/metal"]
cuda = ["docbert-core/cuda"]

[dev-dependencies]
rmcp = { version = "1.2.0", features = ["client", "transport-child-process"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "cli_smoke"
path = "../../tests/cli_smoke.rs"

[[test]]
name = "mcp_stdio"
path = "../../tests/mcp_stdio.rs"

[[test]]
name = "web_smoke"
path = "../../tests/web_smoke.rs"
