[package]
name = "docserver"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "HTTP server for docbert document search and ingestion"

[dependencies]
docbert-core = { path = "../docbert-core" }
axum = "0.8"
mime_guess = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
mkl = ["docbert-core/mkl"]
accelerate = ["docbert-core/accelerate"]
metal = ["docbert-core/metal"]
cuda = ["docbert-core/cuda"]

[dev-dependencies]
tempfile = "3"
