[package]
name = "rustbert"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust crate docs lookup — fetch and search published Rust APIs"

[[bin]]
name = "rustbert"
path = "src/main.rs"

[dependencies]
cargo-lock = "10"
clap = { version = "4.6", features = ["derive", "env"] }
flate2 = "1"
globset = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "stream",
] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hegeltest = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
