[package]
name = "rustbert"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust crate docs lookup — fetch and search published Rust APIs"

[[bin]]
name = "rustbert"
path = "src/main.rs"

[dependencies]
cargo-lock = "10"
clap = { version = "4.6", features = ["derive", "env"] }
docbert-core = { path = "../docbert-core" }
flate2 = "1"
globset = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "stream",
] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
tantivy = "0.26.0"
tar = "0.4"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flate2 = "1"
hegeltest = "0.6"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[features]
default = []
mkl = ["docbert-core/mkl"]
accelerate = ["docbert-core/accelerate"]
metal = ["docbert-core/metal"]
cuda = ["docbert-core/cuda"]
